# port_tarif

./: .env.example  .gitignore  Port_Tariff_Calculator_Pitch.pptx  README.md  calculator.py  config.py  document_processor.py  pyproject.toml  requirements.txt  tariff_schema.py  vessel_profile.py
artefacts/: Generative AI Solutions Developer  Take Home Test.docx  solution_design.puml
src/: agent.py  api.py  fallback_rates.py  main.py  query_parser.py  tariff_extractor.py
src/agent/: agent.py  query_parser.py
src/api/: api.py
src/calculation/: calculator.py  fallback_rates.py
src/core/: config.py  tariff_schema.py
src/ingestion/: document_processor.py  tariff_extractor.py
src/scripts/: create_presentation.py
tests/: test_calculator.py  test_tariff_schema.py
